<resources>
    <string name="app_name">MainProject</string>

    <string name="text_signin">Sign In</string>
    <string name="text_signup">Sign Up</string>
    <string name="text_do_signup">Don\'t Have an Account? Sign Up</string>
    <string name="text_do_signin">Already Have an Account? Sign In</string>
    <string name="text_signin_google">Sign In using google</string>
    <string name="text_forgot_password">Forgot Password?</string>
    <string name="text_first_name">FIRST NAME</string>
    <string name="text_last_name">LAST NAME</string>
    <string name="text_email_address">EMAIL ADDRESS</string>
    <string name="text_password">PASSWORD</string>
    <string name="text_confirm_password">CONFIRM PASSWORD</string>
    <string name="fp_email_id_instruction">Enter Registered Email Address\nTo Reset The Password</string>
    <string name="fp_reset_link_text">Send Reset Password Link</string>
</resources>
