<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="@string/fp_email_id_instruction"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text_size" />

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/violet"
        app:boxStrokeWidth="5dp"
        app:errorTextAppearance="@style/ErrorText"
        app:hintTextAppearance="@style/HintText">

        <EditText
            android:id="@+id/et_fp_email_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/text_email_address" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_fp_send_reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="@drawable/custom_login_btn"
        android:paddingStart="30dp"
        android:paddingLeft="30dp"
        android:paddingEnd="30dp"
        android:paddingRight="30dp"
        android:text="@string/fp_reset_link_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>